.kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CI_PROJECT_NAME
spec:
  selector:
    matchLabels:
      app: $CI_PROJECT_NAME
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: $CI_PROJECT_NAME
    spec:
      imagePullSecrets:
      - name: $RC_REGISTRY_PULL_SECRET
      containers:
      - name: $CI_PROJECT_NAME
        image: $RC_REGISTRY/$CI_PROJECT_PATH:$CI_COMMIT_SHA
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 3
