.kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $CI_PROJECT_NAME
  labels:
    app: $CI_PROJECT_NAME
spec:
  selector:
    app: $CI_PROJECT_NAME
  ports:
  - name: $CI_PROJECT_NAME
    port: 80
    targetPort: 3000
