.kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $CI_PROJECT_NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: $INGRESS_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $CI_PROJECT_NAME
          servicePort: 80
